--- a/src/main/resources/com/example/smproject4/SpecialtyPizzasView.fxml
+++ b/src/main/resources/com/example/smproject4/SpecialtyPizzasView.fxml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.smproject4.SpecialtyPizzasController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.smproject4.SpecialtyPizzasController">
+   <children>
+      <Pane layoutX="14.0" layoutY="14.0" prefHeight="374.0" prefWidth="575.0">
+         <children>
+            <RadioButton layoutX="21.0" layoutY="29.0" mnemonicParsing="false" text="Small">
+               <toggleGroup>
+                  <ToggleGroup fx:id="SizeGroup" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton layoutX="21.0" layoutY="52.0" mnemonicParsing="false" text="Medium">
+               <toggleGroup>
+                  <ToggleGroup fx:id="SizeGroup1" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton layoutX="21.0" layoutY="74.0" mnemonicParsing="false" text="Large" toggleGroup="$SizeGroup" />
+            <ComboBox fx:id="comboBox" layoutX="21.0" layoutY="169.0" prefWidth="150.0" promptText="Select Pizza Type" visibleRowCount="5" />
+            <TextField editable="false" layoutX="396.0" layoutY="335.0" prefHeight="25.0" prefWidth="91.0" />
+            <Text layoutX="358.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" />
+            <CheckBox layoutX="21.0" layoutY="107.0" mnemonicParsing="false" text="Extra Cheese" />
+            <CheckBox layoutX="21.0" layoutY="133.0" mnemonicParsing="false" text="Extra Sauce" />
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="216.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
