--- a/src/main/resources/com/example/smproject4/BuildYourOwnView.fxml
+++ b/src/main/resources/com/example/smproject4/BuildYourOwnView.fxml
@@ -1,14 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.smproject4.BuildYourOwnController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.smproject4.BuildYourOwnController">
+   <children>
+      <Pane layoutX="10.0" layoutY="13.0" prefHeight="374.0" prefWidth="576.0">
+         <children>
+            <RadioButton fx:id="smallButton" layoutX="14.0" layoutY="21.0" mnemonicParsing="false" text="Small">
+               <toggleGroup>
+                  <ToggleGroup fx:id="size" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="mediumButton" layoutX="14.0" layoutY="41.0" mnemonicParsing="false" text="Medium" toggleGroup="$size" />
+            <RadioButton fx:id="largeButton" layoutX="14.0" layoutY="62.0" mnemonicParsing="false" text="Large" toggleGroup="$size" />
+            <CheckBox fx:id="extraCheese" layoutX="14.0" layoutY="94.0" mnemonicParsing="false" text="Extra Cheese" />
+            <CheckBox fx:id="extraSauce" layoutX="14.0" layoutY="119.0" mnemonicParsing="false" text="Extra Sauce" />
+            <ListView fx:id="toppingsList" layoutX="244.0" layoutY="51.0" prefHeight="200.0" prefWidth="129.0" />
+            <Text layoutX="282.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Toppings" />
+            <Text layoutX="366.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" />
+            <TextField fx:id="total" editable="false" layoutX="400.0" layoutY="294.0" prefHeight="25.0" prefWidth="100.0" />
+            <Button layoutX="406.0" layoutY="333.0" mnemonicParsing="false" text="Add To Order" />
+            <CheckBox fx:id="squid" layoutX="140.0" layoutY="244.0" mnemonicParsing="false" text="Squid" />
+            <CheckBox fx:id="crabMeat" layoutX="140.0" layoutY="266.0" mnemonicParsing="false" text="Crab Meat" />
+            <CheckBox fx:id="bananas" layoutX="140.0" layoutY="288.0" mnemonicParsing="false" text="Bananas" />
+            <CheckBox fx:id="iceCream" layoutX="140.0" layoutY="309.0" mnemonicParsing="false" text="Ice Cream" />
+            <CheckBox fx:id="ham" layoutX="140.0" layoutY="157.0" mnemonicParsing="false" text="Ham" />
+            <CheckBox fx:id="blackOlives" layoutX="140.0" layoutY="179.0" mnemonicParsing="false" text="Black Olives" />
+            <CheckBox fx:id="beef" layoutX="140.0" layoutY="201.0" mnemonicParsing="false" text="Beef" />
+            <CheckBox fx:id="shrimp" layoutX="140.0" layoutY="222.0" mnemonicParsing="false" text="Shrimp" />
+            <CheckBox fx:id="mushroom" layoutX="140.0" layoutY="136.0" mnemonicParsing="false" text="Mushroom" />
+            <CheckBox fx:id="sausage" layoutX="140.0" layoutY="49.0" mnemonicParsing="false" text="Sausage" />
+            <CheckBox fx:id="pepperoni" layoutX="140.0" layoutY="71.0" mnemonicParsing="false" text="Pepperoni" />
+            <CheckBox fx:id="greenPepper" layoutX="140.0" layoutY="93.0" mnemonicParsing="false" text="Green Pepper" />
+            <CheckBox fx:id="onion" layoutX="140.0" layoutY="114.0" mnemonicParsing="false" text="Onion" />
+            <RadioButton fx:id="tomatoButton" layoutX="15.0" layoutY="158.0" mnemonicParsing="false" text="Tomato Sauce">
+               <toggleGroup>
+                  <ToggleGroup fx:id="sauce" />
+               </toggleGroup>
+            </RadioButton>
+            <RadioButton fx:id="alfredoButton" layoutX="15.0" layoutY="179.0" mnemonicParsing="false" text="Alfredo Sauce" toggleGroup="$sauce" />
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
