--- a/src/main/resources/com/example/smproject4/SpecialtyPizzasView.fxml
+++ b/src/main/resources/com/example/smproject4/SpecialtyPizzasView.fxml
@@ -9,23 +9,23 @@
    <children>
       <Pane layoutX="14.0" layoutY="14.0" prefHeight="374.0" prefWidth="575.0">
          <children>
-            <RadioButton layoutX="21.0" layoutY="29.0" mnemonicParsing="false" text="Small">
+            <RadioButton fx:id="smallButton" layoutX="13.0" layoutY="29.0" mnemonicParsing="false" text="Small">
                <toggleGroup>
                   <ToggleGroup fx:id="SizeGroup" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton layoutX="21.0" layoutY="52.0" mnemonicParsing="false" text="Medium">
-               <toggleGroup>
-                  <ToggleGroup fx:id="SizeGroup1" />
-               </toggleGroup>
-            </RadioButton>
-            <RadioButton layoutX="21.0" layoutY="74.0" mnemonicParsing="false" text="Large" toggleGroup="$SizeGroup" />
-            <ComboBox fx:id="comboBox" layoutX="21.0" layoutY="169.0" prefWidth="150.0" promptText="Select Pizza Type" visibleRowCount="5" />
-            <TextField editable="false" layoutX="396.0" layoutY="335.0" prefHeight="25.0" prefWidth="91.0" />
-            <Text layoutX="358.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" />
-            <CheckBox layoutX="21.0" layoutY="107.0" mnemonicParsing="false" text="Extra Cheese" />
-            <CheckBox layoutX="21.0" layoutY="133.0" mnemonicParsing="false" text="Extra Sauce" />
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="216.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true" />
+            <RadioButton fx:id="mediumButton" layoutX="13.0" layoutY="52.0" mnemonicParsing="false" text="Medium" toggleGroup="$SizeGroup" />
+            <RadioButton fx:id="LargeButton" layoutX="13.0" layoutY="74.0" mnemonicParsing="false" text="Large" toggleGroup="$SizeGroup" />
+            <ComboBox fx:id="comboBox" layoutX="17.0" layoutY="181.0" prefHeight="25.0" prefWidth="141.0" promptText="Select Pizza Type" visibleRowCount="5" />
+            <TextField fx:id="total" editable="false" layoutX="421.0" layoutY="290.0" prefHeight="25.0" prefWidth="91.0" />
+            <Text layoutX="387.0" layoutY="306.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" />
+            <CheckBox fx:id="extraCheese" layoutX="13.0" layoutY="115.0" mnemonicParsing="false" text="Extra Cheese" />
+            <CheckBox fx:id="extraSauce" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" text="Extra Sauce" />
+            <ImageView disable="true" fitHeight="150.0" fitWidth="200.0" layoutX="346.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true" />
+            <ListView fx:id="toppingsList" layoutX="182.0" layoutY="46.0" prefHeight="158.0" prefWidth="117.0" />
+            <Text layoutX="216.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Toppings" />
+            <Button fx:id="addToOrderButton" layoutX="422.0" layoutY="328.0" mnemonicParsing="false" text="Add To Order" />
+            <Text fx:id="pizzaName" layoutX="425.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pizza" />
          </children>
       </Pane>
    </children>
