--- a/src/main/resources/com/example/smproject4/StoreOrdersView.fxml
+++ b/src/main/resources/com/example/smproject4/StoreOrdersView.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.smproject4.StoreOrdersController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.smproject4.StoreOrdersController">
+   <children>
+      <Pane layoutX="14.0" layoutY="14.0" prefHeight="370.0" prefWidth="574.0">
+         <children>
+            <ListView fx:id="ordersList" layoutX="14.0" layoutY="28.0" prefHeight="332.0" prefWidth="74.0" />
+            <ListView fx:id="pizzasList" layoutX="108.0" layoutY="28.0" prefHeight="200.0" prefWidth="139.0" />
+            <TextArea fx:id="currentPizza" editable="false" layoutX="267.0" layoutY="28.0" prefHeight="106.0" prefWidth="249.0" />
+            <Text layoutX="14.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Order #:" />
+            <Text layoutX="108.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pizzas in Order:" />
+            <Text layoutX="267.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selected Pizza:" />
+            <Button layoutX="108.0" layoutY="250.0" mnemonicParsing="false" text="Cancel Order" />
+            <Button layoutX="108.0" layoutY="301.0" mnemonicParsing="false" text="Export Orders" />
+            <TextField fx:id="total" editable="false" layoutX="427.0" layoutY="146.0" prefHeight="25.0" prefWidth="89.0" />
+            <Text layoutX="392.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" />
+         </children>
+      </Pane>
+   </children>
 </AnchorPane>
