--- a/src/main/resources/com/example/smproject4/SpecialtyPizzasView.fxml
+++ b/src/main/resources/com/example/smproject4/SpecialtyPizzasView.fxml
@@ -9,6 +9,20 @@
    <children>
       <Pane layoutX="14.0" layoutY="14.0" prefHeight="374.0" prefWidth="575.0">
          <children>
+            <ImageView fx:id="meatzzaImage" fitHeight="133.0" fitWidth="177.0" layoutX="346.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../../meatzza.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="supremeImage" fitHeight="133.0" fitWidth="200.0" layoutX="346.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../../supreme.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="emptyBox" disable="true" fitHeight="150.0" fitWidth="200.0" layoutX="327.0" layoutY="48.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../empty.png" />
+               </image></ImageView>
             <RadioButton fx:id="smallButton" layoutX="13.0" layoutY="29.0" mnemonicParsing="false" text="Small">
                <toggleGroup>
                   <ToggleGroup fx:id="SizeGroup" />
@@ -21,11 +35,25 @@
             <Text layoutX="387.0" layoutY="306.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" />
             <CheckBox fx:id="extraCheese" layoutX="13.0" layoutY="115.0" mnemonicParsing="false" text="Extra Cheese" />
             <CheckBox fx:id="extraSauce" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" text="Extra Sauce" />
-            <ImageView disable="true" fitHeight="150.0" fitWidth="200.0" layoutX="346.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true" />
             <ListView fx:id="toppingsList" layoutX="182.0" layoutY="46.0" prefHeight="158.0" prefWidth="117.0" />
             <Text layoutX="216.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Toppings" />
             <Button fx:id="addToOrderButton" layoutX="422.0" layoutY="328.0" mnemonicParsing="false" text="Add To Order" />
-            <Text fx:id="pizzaName" layoutX="425.0" layoutY="208.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pizza" />
+            <Text fx:id="pizzaName" layoutX="388.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No Pizza Selected" />
+            <ImageView fx:id="deluxeImage" fitHeight="141.0" fitWidth="191.0" layoutX="346.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../../deluxe.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="seafoodImage" fitHeight="150.0" fitWidth="200.0" layoutX="340.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../../seafood.png" />
+               </image>
+            </ImageView>
+            <ImageView fx:id="pepperoniImage" fitHeight="150.0" fitWidth="200.0" layoutX="335.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" visible="false">
+               <image>
+                  <Image url="@../../../pepperoni.jpg" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
