--- a/src/main/resources/com/example/smproject4/BuildYourOwnView.fxml
+++ b/src/main/resources/com/example/smproject4/BuildYourOwnView.fxml
@@ -34,10 +34,10 @@
             <RadioButton fx:id="largeButton" layoutX="14.0" layoutY="62.0" mnemonicParsing="false" text="Large" toggleGroup="$size" />
             <CheckBox fx:id="extraCheeseBox" layoutX="14.0" layoutY="94.0" mnemonicParsing="false" text="Extra Cheese" />
             <CheckBox fx:id="extraSauceBox" layoutX="14.0" layoutY="119.0" mnemonicParsing="false" text="Extra Sauce" />
-            <ListView fx:id="toppingsList" layoutX="244.0" layoutY="51.0" prefHeight="200.0" prefWidth="129.0" />
+            <ListView fx:id="toppingsList" editable="true" layoutX="244.0" layoutY="51.0" prefHeight="200.0" prefWidth="129.0" />
             <Text layoutX="282.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Toppings" />
             <Text layoutX="366.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Total:" />
-            <TextField fx:id="total" editable="false" layoutX="400.0" layoutY="294.0" prefHeight="25.0" prefWidth="100.0" />
+            <TextField fx:id="priceDisplay" editable="false" layoutX="400.0" layoutY="294.0" prefHeight="25.0" prefWidth="100.0" />
             <Button layoutX="406.0" layoutY="333.0" mnemonicParsing="false" onAction="#buildPizza" text="Add To Order" />
             <RadioButton fx:id="tomatoButton" layoutX="15.0" layoutY="158.0" mnemonicParsing="false" text="Tomato Sauce">
                <toggleGroup>
