--- a/src/main/resources/com/example/smproject4/BuildYourOwnView.fxml
+++ b/src/main/resources/com/example/smproject4/BuildYourOwnView.fxml
@@ -45,6 +45,7 @@
                </toggleGroup>
             </RadioButton>
             <RadioButton fx:id="alfredoButton" layoutX="15.0" layoutY="179.0" mnemonicParsing="false" text="Alfredo Sauce" toggleGroup="$sauce" />
+            <TextArea fx:id="display" layoutX="87.0" layoutY="281.0" prefHeight="76.0" prefWidth="262.0" />
          </children>
       </Pane>
    </children>
