--- a/src/main/resources/com/example/smproject4/MainMenuView.fxml
+++ b/src/main/resources/com/example/smproject4/MainMenuView.fxml
@@ -11,13 +11,30 @@
     </padding>
    <Pane prefHeight="400.0" prefWidth="440.0">
       <children>
-         <Button fx:id="orderSpecialityPizzasButton" layoutX="39.0" layoutY="156.0" mnemonicParsing="false" onAction="#onOrderSpecialityClick" text="Order Speciality Pizzas" />
-         <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@../../../orderSpecialty.jpg" />
-            </image>
-         </ImageView>
-         <Button fx:id="buildYourOwnPizzaButton" layoutX="255.0" layoutY="155.0" mnemonicParsing="false" onAction="#onBuildYourOwnClick" text="Build Your Own Pizza" />
+         <Button fx:id="specialtyButton" layoutX="31.0" layoutY="29.0" mnemonicParsing="false" onAction="#onOrderSpecialityClick">
+          <graphic>
+              <VBox alignment="CENTER">
+              <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                      <Image url="@../../../orderSpecialty.jpg" />
+                  </image>
+              </ImageView>
+                  <Label text="Order Specialty Pizzas" />
+              </VBox>
+          </graphic>
+          </Button>
+         <Button fx:id="buildYourOwnPizzaButton" layoutX="246.0" layoutY="129.0" mnemonicParsing="false" onAction="#onBuildYourOwnClick">
+             <graphic>
+            <VBox alignment="CENTER">
+              <ImageView fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                      <Image url="@../../../customImage.png" />
+                  </image>
+              </ImageView>
+              <Label text="Build Your Own Pizza" />
+          </VBox>
+        </graphic>
+         </Button>
          <Button fx:id="currentOrderButton" layoutX="46.0" layoutY="307.0" mnemonicParsing="false" onAction="#onCurrentOrderClick" text="Current Order" />
          <Button fx:id="storeOrdersButton" layoutX="310.0" layoutY="307.0" mnemonicParsing="false" onAction="#onStoreOrdersClick" text="Store Orders" />
       </children>
